Tela de unidade e inserção de unidade iniciada

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,10 +182,14 @@ transform: translateY(0.625rem);
     background-color: #007bff;
 }
 
-/* DROPDOWN COLOR 
+/* DROPDOWN MENU 
 ------------------------------*/
 .navbar-nav > li > .dropdown-menu a:focus{ 
   background-color: #cecece; 
+}
+
+.dropdown:hover>.dropdown-menu {
+  display: block;
 }
 
 /* DATATABLE BOOTSTRAP 4
